# Reinforcement_Learning

./: .gitignore  1_optimal_control.ipynb  2_1_pendulum.ipynb  2_predictive_control.ipynb  3_MDP.ipynb  4_deep_RL.ipynb  Discrete.py  MDP.ipynb  Misc.py  MonteCarloAgent.py  PID.py  QLearning.py  README.md  SampleLearning.py  custom_frozen_lake.py  optimal_control.ipynb  predictive_control.ipynb  pyproject.toml  reinforcement_learning.ipynb
.github/workflows/: lint.yml
