[project]
name = "reinforcement-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudpickle==3.1.0",
    "farama-notifications==0.0.4",
    "gymnasium[toy-text]==1.0.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "numpy==2.1.3",
    "ruff==0.7.3",
    "typing-extensions==4.12.2",
]
